--- a/Real-time-search-Rest-API/src/main/resources/application.properties
+++ b/Real-time-search-Rest-API/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=Real-time-search-Rest-API.
+server.port=8081
+
+spring.datasource.url=jdbc:mysql://localhost:3306/search_api
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
